examples/evolution/ts14/union.ts
let numberOrString: number | string;

numberOrString = 1; //ok
numberOrString = ""; //ok
numberOrString = true; //error





